--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Hello</h1>
+    <header>
+        <div>
+            <button>
+                
+            </button>
+        </div>
+    </header>
 </body>
 </html>
