--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Hello</h1>
+    <h2>by by</h2>
+    <h3>hi</h3>
+    <h4>yes</h4>
     <header>
         <div>
             <button>
