--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
             </button>
         </div>
     </header>
+
+
+    <main>
+        <h1>Heading</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita vel nisi minima dolor veniam harum necessitatibus molestias ullam, ex fugit iste voluptatibus velit sit numquam aut nesciunt, culpa nostrum doloribus?</p>
+    </main>
 </body>
 </html>
